# Trading

./: .gitignore  Cargo.toml  backup.ps1
backend/: aggregate_parquet.py  bi5_reader.py  convert_to_parquet.py  downloader.py  fast_downloader.py  fast_downloader2.py  fast_downloader3.py  fast_repair_data.py  output_sample.txt  read_parquet_sample.py  repair_missing_data.py  server.py  smart_downloader.py  validate_api.py  verify_and_retry.py
engine/: Cargo.toml  engine.py
engine/src/: main.rs
frontend/: index.html  main.js
parquet_data/EURGBP/2020/: 00.parquet  01.parquet  02.parquet  03.parquet  04.parquet  05.parquet  06.parquet  07.parquet  08.parquet  09.parquet  10.parquet  11.parquet
parquet_data/EURGBP/2021/: 00.parquet  01.parquet  02.parquet  03.parquet  04.parquet  05.parquet  06.parquet  07.parquet  08.parquet  09.parquet  10.parquet  11.parquet
parquet_data/EURGBP/2022/: 00.parquet  01.parquet  02.parquet  03.parquet  04.parquet  05.parquet  06.parquet  07.parquet  08.parquet  09.parquet  10.parquet  11.parquet
parquet_data/EURGBP/2023/: 00.parquet  01.parquet  02.parquet  03.parquet  04.parquet  05.parquet  06.parquet  07.parquet  08.parquet  09.parquet  10.parquet  11.parquet
parquet_data/EURGBP/2024/: 00.parquet  01.parquet  02.parquet  03.parquet  04.parquet  05.parquet  06.parquet  07.parquet  08.parquet  09.parquet  10.parquet  11.parquet
parquet_data/EURGBP/2025/: 00.parquet  01.parquet  02.parquet  03.parquet  04.parquet  05.parquet  06.parquet  07.parquet  08.parquet  09.parquet  10.parquet  11.parquet
(+1081 files in other folders)
