[package]
name = "fxlab_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.36", features = ["lazy", "parquet", "strings", "rolling_window", "temporal", "dtype-datetime", "performant"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
